--- a/portfolio/GentleNut/css/style.css
+++ b/portfolio/GentleNut/css/style.css
@@ -1745,7 +1745,7 @@ body {
 .item-technology__item::before {
   content: "";
   position: absolute;
-  top: 20%;
+  top: 17px;
   left: 0;
   width: 5px;
   height: 5px;
@@ -1755,6 +1755,17 @@ body {
 
 .item-technology__item:last-child {
   margin-bottom: 0rem;
+}
+
+.technology__slider {
+  margin-top: 3.125rem;
+}
+
+.technology__slide img {
+  width: 150px;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .topc {
@@ -2944,6 +2955,13 @@ button.swiper-pagination-bullet {
     margin-bottom: 7.5rem;
   }
 
+  .technology__slide img {
+    width: 100px;
+    height: 100px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
   .topc-tabs__title {
     margin-right: 12.5rem;
   }
@@ -3351,6 +3369,13 @@ button.swiper-pagination-bullet {
 
   .technology__row {
     margin-bottom: 5.625rem;
+  }
+
+  .technology__slide img {
+    width: 150px;
+    height: 150px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 
   .topc-tabs__elementsright {
