--- a/portfolio/GentleNut/css/style.css
+++ b/portfolio/GentleNut/css/style.css
@@ -365,6 +365,43 @@ h6 {
           transform: rotate(180deg);
 }
 
+.topre-button-prev,
+.swiper-rtl .topre-button-next {
+  top: 50% !important;
+  left: -100px !important;
+  right: auto;
+}
+
+.topre-button-prev:after,
+.swiper-rtl .topre-button-next:after {
+  content: "";
+  background-image: url(../img/base/swiper-arrow.svg);
+  width: 60px !important;
+  height: 60px !important;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.topre-button-next,
+.swiper-rtl .topre-button-prev {
+  top: 50% !important;
+  right: -100px !important;
+  left: auto;
+}
+
+.topre-button-next:after,
+.swiper-rtl .topre-button-prev:after {
+  content: "";
+  background-image: url(../img/base/swiper-arrow.svg);
+  width: 60px !important;
+  height: 60px !important;
+  background-repeat: no-repeat;
+  background-size: contain;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
 .tabs__navigation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1980,14 +2017,14 @@ body {
   text-align: center;
 }
 
-.body-tabs__title {
+.body-tabs__title-topc {
   text-align: center;
   margin-top: 7.5rem;
   margin-bottom: 5rem;
   position: relative;
 }
 
-.body-tabs__title::before {
+.body-tabs__title-topc::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -2000,19 +2037,19 @@ body {
   z-index: -1;
 }
 
-.body-tabs__title.yellow::before {
+.body-tabs__title-topc.yellow::before {
   background-image: url(../img/catalog/yellow.svg);
-  width: 520px;
-  height: 160px;
+  width: 520px !important;
+  height: 160px !important;
 }
 
-.body-tabs__title.green::before {
+.body-tabs__title-topc.green::before {
   background-image: url(../img/catalog/green.svg);
   width: 759px;
   height: 160px;
 }
 
-.body-tabs__title.blue::before {
+.body-tabs__title-topc.blue::before {
   background-image: url(../img/catalog/blue.svg);
   width: 759px;
   height: 160px;
@@ -2532,6 +2569,452 @@ body {
 .recipes__title {
   text-align: center;
   margin-bottom: 3.125rem;
+}
+
+.topre {
+  position: relative;
+}
+
+.topre__bottom-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 206px;
+  height: 141px;
+}
+
+.topre__bottom-left svg {
+  width: 206px;
+  height: 141px;
+}
+
+.topre__bottom-right {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 93px;
+  height: 94px;
+}
+
+.topre__bottom-right svg {
+  width: 93px;
+  height: 94px;
+}
+
+.topre__body {
+  position: relative;
+}
+
+.topre-slide__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 10rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.topre-slide__imageblock {
+  margin-top: 10rem;
+}
+
+.block-topre__title {
+  margin-top: 15.625rem;
+}
+
+.block-topre__label {
+  margin-top: 1.625rem;
+  text-transform: uppercase;
+}
+
+.block-topre__timeblock {
+  margin-top: 1.875rem;
+}
+
+.block-topre__list {
+  margin-top: 1.5625rem;
+  margin-left: 1.875rem;
+  max-width: 400px;
+}
+
+.block-topre__item {
+  margin-bottom: 0.9375rem;
+  line-height: 1.5;
+}
+
+.block-topre__item:last-child {
+  margin-bottom: 0rem;
+}
+
+.timeblock-topre__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.timeblock-topre__image {
+  margin-right: 0.75rem;
+}
+
+.timeblock-topre__time {
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.col-topre__button {
+  margin-left: 1.875rem;
+  margin-top: 3.125rem;
+}
+
+.imageblock-topre__figure {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.imageblock-topre__image {
+  position: relative;
+  z-index: 2;
+  width: 679px;
+  height: 719px;
+}
+
+.imageblock-topre__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.contact {
+  position: relative;
+}
+
+.contact__bottom-left {
+  position: absolute;
+  bottom: 30px;
+  left: 20px;
+  width: 200px;
+  height: 118px;
+}
+
+.contact__bottom-left img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.contact__bottom-right {
+  position: absolute;
+  bottom: 30px;
+  right: 20px;
+  width: 49px;
+  height: 37px;
+}
+
+.contact__bottom-right img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.contact__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 1.5;
+}
+
+.contact__body a {
+  font-weight: 700;
+}
+
+.contact__title {
+  margin-top: 10.625rem;
+}
+
+.contact__email {
+  margin-top: 2.5rem;
+  text-align: center;
+}
+
+.contact__email a {
+  position: relative;
+}
+
+.contact__email a::after {
+  content: "";
+  position: absolute;
+  bottom: 1px;
+  height: 2px;
+  left: 50%;
+  width: 0%;
+  background-color: #6A3834;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.contact__email a:hover::after {
+  width: 100%;
+}
+
+.contact__phone {
+  margin-top: 0.9375rem;
+}
+
+.contact__phone a {
+  position: relative;
+}
+
+.contact__phone a::after {
+  content: "";
+  position: absolute;
+  bottom: 1px;
+  height: 2px;
+  left: 50%;
+  width: 0%;
+  background-color: #6A3834;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.contact__phone a:hover::after {
+  width: 100%;
+}
+
+.contact__adress {
+  margin-top: 0.9375rem;
+}
+
+.contact__block {
+  margin-top: 5rem;
+  width: 100%;
+  margin-bottom: 12.5rem;
+}
+
+.block-contact__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.block-contact__comment {
+  background: none;
+  color: #fff;
+  margin-top: 1.25rem;
+  margin-left: 1.875rem;
+  outline: none;
+  color: #6A3834;
+  width: 90%;
+  height: 70%;
+}
+
+.block-contact__comment:focus {
+  font-weight: 700;
+  color: #6A3834;
+}
+
+.block-contact__comment::-webkit-input-placeholder {
+  color: #6A3834;
+}
+
+.block-contact__comment::-moz-placeholder {
+  color: #6A3834;
+}
+
+.block-contact__comment:-ms-input-placeholder {
+  color: #6A3834;
+}
+
+.block-contact__comment::-ms-input-placeholder {
+  color: #6A3834;
+}
+
+.block-contact__comment::placeholder {
+  color: #6A3834;
+}
+
+.block-contact__textdiv {
+  position: relative;
+  width: 758px;
+  height: 241px;
+}
+
+.block-contact__textdiv::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 758px;
+  height: 241px;
+  background-image: url(../img/contact/comment.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.col-contact__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.col-contact__body input {
+  outline: none;
+  background: none;
+  line-height: 1.5;
+  color: #6A3834;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.col-contact__body input:focus {
+  font-weight: 700;
+  color: #6A3834;
+}
+
+.col-contact__body input::-webkit-input-placeholder {
+  color: #6A3834;
+}
+
+.col-contact__body input::-moz-placeholder {
+  color: #6A3834;
+}
+
+.col-contact__body input:-ms-input-placeholder {
+  color: #6A3834;
+}
+
+.col-contact__body input::-ms-input-placeholder {
+  color: #6A3834;
+}
+
+.col-contact__body input::placeholder {
+  color: #6A3834;
+}
+
+.col-contact__namediv {
+  position: relative;
+  margin-bottom: 1.125rem;
+  width: 360px;
+  height: 66px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.col-contact__namediv::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url(../img/contact/name.svg);
+  width: 360px;
+  height: 66px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.col-contact__name {
+  margin-left: 1.25rem;
+}
+
+.col-contact__phonediv {
+  position: relative;
+  margin-bottom: 1.125rem;
+  width: 360px;
+  height: 66px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.col-contact__phonediv::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url(../img/contact/mobile.svg);
+  width: 360px;
+  height: 66px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.col-contact__phone {
+  margin-left: 1.25rem;
+}
+
+.col-contact__emaildiv {
+  position: relative;
+  margin-bottom: 1.125rem;
+  width: 360px;
+  height: 66px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.col-contact__emaildiv::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url(../img/contact/email.svg);
+  width: 360px;
+  height: 66px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.col-contact__email {
+  margin-left: 1.25rem;
 }
 
 /**
@@ -3454,6 +3937,47 @@ button.swiper-pagination-bullet {
   .topc-tabs__title:first-child {
     margin-right: 10.625rem;
   }
+
+  .imageblock-topre__image {
+    width: 500px;
+    height: 540px;
+  }
+
+  .block-contact__textdiv {
+    width: 600px;
+    height: 200px;
+  }
+
+  .block-contact__textdiv::before {
+    width: 600px;
+  }
+
+  .col-contact__namediv {
+    width: 300px;
+    height: 3.125rem;
+  }
+
+  .col-contact__namediv::before {
+    width: 300px;
+  }
+
+  .col-contact__phonediv {
+    width: 300px;
+    height: 3.125rem;
+  }
+
+  .col-contact__phonediv::before {
+    width: 300px;
+  }
+
+  .col-contact__emaildiv {
+    width: 300px;
+    height: 3.125rem;
+  }
+
+  .col-contact__emaildiv::before {
+    width: 300px;
+  }
 }
 
 @media (max-width: 61.99875em) {
@@ -3488,6 +4012,18 @@ button.swiper-pagination-bullet {
   .ratem-swiper-button-next-center,
   .swiper-rtl .ratem-swiper-button-prev-center {
     right: 50px !important;
+  }
+
+  .topre-button-prev,
+  .swiper-rtl .topre-button-next {
+    top: 500px !important;
+    left: 0px !important;
+  }
+
+  .topre-button-next,
+  .swiper-rtl .topre-button-prev {
+    top: 500px !important;
+    right: 0px !important;
   }
 
   .footer {
@@ -3911,7 +4447,7 @@ button.swiper-pagination-bullet {
     height: 62px;
   }
 
-  .body-tabs__title {
+  .body-tabs__title-topc {
     margin-top: 5.625rem;
   }
 
@@ -3953,6 +4489,89 @@ button.swiper-pagination-bullet {
 
   .topi-slide__block {
     margin-top: 0rem;
+  }
+
+  .topre-slide__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+
+  .topre-slide__imageblock {
+    margin-top: 13.75rem;
+  }
+
+  .block-topre__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .block-topre__title {
+    margin-top: 3.125rem;
+    text-align: center;
+  }
+
+  .block-topre__label {
+    text-align: center;
+  }
+
+  .block-topre__timeblock {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+
+  .block-topre__list {
+    max-width: 100%;
+  }
+
+  .col-topre__button {
+    margin-left: 0rem;
+  }
+
+  .block-contact__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .col-contact__namediv {
+    width: 360px;
+    height: 66px;
+  }
+
+  .col-contact__namediv::before {
+    width: 360px;
+  }
+
+  .col-contact__phonediv {
+    width: 360px;
+    height: 66px;
+  }
+
+  .col-contact__phonediv::before {
+    width: 360px;
+  }
+
+  .col-contact__emaildiv {
+    width: 360px;
+    height: 66px;
+  }
+
+  .col-contact__emaildiv::before {
+    width: 360px;
   }
 }
 
@@ -4018,6 +4637,16 @@ button.swiper-pagination-bullet {
 
   .ratem-swiper-button-next-center,
   .swiper-rtl .ratem-swiper-button-prev-center {
+    right: 0px !important;
+  }
+
+  .topre-button-prev,
+  .swiper-rtl .topre-button-next {
+    left: 0px !important;
+  }
+
+  .topre-button-next,
+  .swiper-rtl .topre-button-prev {
     right: 0px !important;
   }
 
@@ -4570,12 +5199,12 @@ button.swiper-pagination-bullet {
     padding-bottom: 3.125rem;
   }
 
-  .body-tabs__title {
+  .body-tabs__title-topc {
     margin-top: 3.125rem;
     margin-bottom: 3.125rem;
   }
 
-  .body-tabs__title.yellow::before {
+  .body-tabs__title-topc.yellow::before {
     width: 340px;
     height: 76px;
     -webkit-transform: translateX(-40%) translateY(-50%);
@@ -4583,12 +5212,12 @@ button.swiper-pagination-bullet {
             transform: translateX(-40%) translateY(-50%);
   }
 
-  .body-tabs__title.green::before {
+  .body-tabs__title-topc.green::before {
     width: 340px;
     height: 76px;
   }
 
-  .body-tabs__title.blue::before {
+  .body-tabs__title-topc.blue::before {
     width: 340px;
     height: 76px;
   }
@@ -4614,11 +5243,17 @@ button.swiper-pagination-bullet {
   .body-tabs__title.green::before {
     width: 340px;
     height: 76px;
+    -webkit-transform: translateX(-50%) translateY(-40%);
+        -ms-transform: translateX(-50%) translateY(-40%);
+            transform: translateX(-50%) translateY(-40%);
   }
 
   .body-tabs__title.blue::before {
     width: 340px;
     height: 76px;
+    -webkit-transform: translateX(-50%) translateY(-40%);
+        -ms-transform: translateX(-50%) translateY(-40%);
+            transform: translateX(-50%) translateY(-40%);
   }
 
   .body-tabs__title.yellow-w::before {
@@ -4641,6 +5276,10 @@ button.swiper-pagination-bullet {
   .topr-slide__image svg {
     width: 263px;
     height: 199px;
+  }
+
+  .topi__body {
+    padding-bottom: 5rem;
   }
 
   .topi__bottom-left {
@@ -4683,6 +5322,47 @@ button.swiper-pagination-bullet {
 
   .recipes__topborder {
     display: none;
+  }
+
+  .topre__bottom-left {
+    width: 104px;
+    height: 71px;
+  }
+
+  .topre__bottom-left svg {
+    width: 104px;
+    height: 71px;
+  }
+
+  .topre__bottom-right {
+    width: 61px;
+    height: 61px;
+  }
+
+  .topre__bottom-right svg {
+    width: 61px;
+    height: 61px;
+  }
+
+  .topre-slide__body {
+    padding-bottom: 4.375rem;
+  }
+
+  .imageblock-topre__image {
+    width: 400px;
+    height: 440px;
+  }
+
+  .block-contact__textdiv {
+    max-width: 100%;
+  }
+
+  .block-contact__textdiv::before {
+    width: 100%;
+  }
+
+  .col-contact__phonediv::before {
+    background-size: fill;
   }
 }
 
@@ -4764,6 +5444,12 @@ button.swiper-pagination-bullet {
   }
 }
 
+@media (max-width: 34.5em) {
+  .block-contact__comment {
+    max-height: 60%;
+  }
+}
+
 @media (max-width: 32.5em) {
   .col-newtype__image {
     margin-left: -5rem;
@@ -4802,6 +5488,18 @@ button.swiper-pagination-bullet {
 
   .ratem-swiper-button-next-center,
   .swiper-rtl .ratem-swiper-button-prev-center {
+    right: 0 !important;
+  }
+
+  .topre-button-prev,
+  .swiper-rtl .topre-button-next {
+    top: 380px !important;
+    left: 0 !important;
+  }
+
+  .topre-button-next,
+  .swiper-rtl .topre-button-prev {
+    top: 380px !important;
     right: 0 !important;
   }
 
@@ -4886,11 +5584,30 @@ button.swiper-pagination-bullet {
     max-width: 342px;
     height: 460px;
   }
+
+  .block-topre__title {
+    margin-top: 2.1875rem;
+  }
+
+  .imageblock-topre__image {
+    width: 225px;
+    height: 257px;
+  }
+
+  .block-contact__comment {
+    max-height: 50%;
+  }
 }
 
 @media (max-width: 27.3125em) {
   .contactblock-footer__item {
     padding: 0rem 0rem 0rem 0rem;
+  }
+}
+
+@media (max-width: 26.5625em) {
+  .block-contact__comment {
+    max-height: 40%;
   }
 }
 
